feat: finalização do readme e alteração do backend para que a conexão com o banco de dados seja feita de maneira correta onde os dados sejam coletados

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
   "name": "portifolio-softwareengineering",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "jest"
   },
   "keywords": [],
