--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,9 +20,7 @@ jobs:
           node-version: '18'
 
       - name: Instalar dependências
-        run: cd backend
-        run: npm install
+        run: cd backend && npm install
 
       - name: Rodar testes com Jest
-        run: cd backend
-        run: npm run test
+        run: cd backend && npm run test
